--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>My first styled page</title>
-  <link rel="stylesheet" href="WEEK2-2.css">
+  <link rel="stylesheet" href="mystyle.css">
 </head>
 
 <body>
