--- a/design/主页.html
+++ b/design/主页.html
@@ -145,7 +145,7 @@
   <p id="ycdnb"><br></p>
 <a href="盛乐机场IP.html" class="bdbb">内蒙古自治区呼和浩特盛乐国际机场 IP形象设计（2024）	</a>
 <p id="ycdnb"><br></p>
-<a href="https://www.720yun.com/vr/62ajzsynOn3?study_style_id=feeds_pure&xuexi_article_id=24:15262760308455575&source=share" target="_blank" class="bdbb">中共中央宣传部"学习强国"平台 AIGC+VR创新影像视觉设计（2024）	</a>
+<a href="学习强国.html" target="_blank" class="bdbb">中共中央宣传部"学习强国"平台 AIGC+VR创新影像视觉设计（2024）	</a>
   <br><p style="font-size:15px;letter-spacing:0.4px;line-height:25px;color:#a6a6a6">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp商业合作案例</p>
 
   <a href="北京海鸟际画艺术.html" class="bdbb">北京海鸟际画艺术有限公司 年度品牌视觉与新媒体传播策略服务（2022至今）	</a>
