--- a/design/品牌(标志、视觉识别系统、IP形象).html
+++ b/design/品牌(标志、视觉识别系统、IP形象).html
@@ -113,24 +113,26 @@
 <div id="portfolio-single-holder"></div>
 <div class="portfolio-wrapper">
 <div id="posts" class="row gutter-isotope-item">
-<div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-<a href="闰土个人品牌.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
-<div class="overlay">
-<span class="wrap-icon icon-link2"></span>
-<div class="portfolio-item-content">
-<h3>闰土RUNTO</h3><BR>
-<p style="font-size:15px;letter-spacing:0.4px;line-height:20px;color:#a6a6a6">闰土 个人品牌设计（2019）</p>
-</div>
-</div>
-<img src="runto.png" class="lazyload  img-fluid" alt="Images">
-</a>
-</div>
+  <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+  <a href="盛乐机场IP.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
+  <div class="overlay">
+  <span class="wrap-icon icon-link2"></span>
+  <div class="portfolio-item-content">
+  <h3 style="letter-spacing:0.7px">呼和浩特盛乐机场</h3><BR>
+  <p style="font-size:15px;letter-spacing:0.4px;line-height:20px;color:#a6a6a6">内蒙古自治区呼和浩特盛乐国际机场 IP形象设计（2024）
+  </p>
+  </div>
+  </div>
+  <img src="盛乐机场IP.png" class="lazyload  img-fluid" alt="Images">
+  </a>
+  </div>
+
 <div class="item branding packaging illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
 <a href="传媒大学70周年.html" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="3">
 <div class="overlay">
 <span class="wrap-icon icon-link2"></span>
 <div class="portfolio-item-content">
-<h3>传媒大学70周年</h3><BR>
+<h3 style="letter-spacing:0.7px">传媒大学70周年</h3><BR>
 <p style="font-size:15px;letter-spacing:0.4px;line-height:20px;color:#a6a6a6">中国传媒大学70周年校庆 视觉形象识别系统设计 (2023)</p>
 </div>
 </div>
@@ -142,11 +144,23 @@
 <div class="overlay">
 <span class="wrap-icon icon-link2"></span>
 <div class="portfolio-item-content">
-<h3>北京哲社奖</h3><BR>
+<h3 style="letter-spacing:0.7px">北京哲社奖</h3><BR>
 <p style="font-size:15px;letter-spacing:0.4px;line-height:20px;color:#a6a6a6">北京市社科联北京市哲学社会科学优秀成果奖 品牌形象设计 (2024)</p>
 </div>
 </div>
 <img src="哲社.png" class="lazyload  img-fluid" alt="Images">
+</a>
+</div>
+<div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+<a href="闰土个人品牌.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
+<div class="overlay">
+<span class="wrap-icon icon-link2"></span>
+<div class="portfolio-item-content">
+<h3 style="letter-spacing:0.7px">闰土RUNTO</h3><BR>
+<p style="font-size:15px;letter-spacing:0.4px;line-height:20px;color:#a6a6a6">闰土 个人品牌设计（2019）</p>
+</div>
+</div>
+<img src="runto.png" class="lazyload  img-fluid" alt="Images">
 </a>
 </div>
 </div>
