--- a/design/品牌(标志、视觉识别系统、IP形象).html
+++ b/design/品牌(标志、视觉识别系统、IP形象).html
@@ -107,10 +107,8 @@
 
 
 
-<div class="unslate_co--section" id="portfolio-section">
+<div class="unslate_co--section">
 <div class="container">
-<div class="relative"><div class="loader-portfolio-wrap"><div class="loader-portfolio"></div></div> </div>
-<div id="portfolio-single-holder"></div>
 <div class="portfolio-wrapper">
 <div id="posts" class="row gutter-isotope-item">
   <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
